fix: refactor code structure for improved readability and maintainability

--- a/src/sub-blocks/FeedCard/FeedCard.scss
+++ b/src/sub-blocks/FeedCard/FeedCard.scss
@@ -1,7 +1,7 @@
-@import '../../../../styles/mixins';
-@import '../../../../styles/variables';
+@import '../../../styles/mixins';
+@import '../../../styles/variables';
 
-$block: '.#{$ns}events-feed-card';
+$block: '.#{$ns}feed-card';
 
 #{$block} {
     display: flex;
@@ -21,6 +21,17 @@ $block: '.#{$ns}events-feed-card';
 
     &__image {
         width: 100%;
+    }
+
+    &__type {
+        position: absolute;
+        width: 1px;
+        height: 1px;
+        margin: -1px;
+        overflow: hidden;
+        clip: rect(0, 0, 0, 0);
+        white-space: nowrap;
+        border: 0;
     }
 
     &__title {
